# CiteShield-legal-citation-verifier-CLI

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
samples/: brief.txt  test_brief.txt
src/citation_agent/: __init__.py  cli.py  document.py  models.py  report_exporter.py  service.py  tools.py
src/citation_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_document.py  test_report_exporter.py  test_service.py  test_tools.py
